admin: fix vertical alignment of close button in toast message

--- a/admin/src/components/base/Toast/Toast.css
+++ b/admin/src/components/base/Toast/Toast.css
@@ -29,5 +29,5 @@
 
 .toast::part(close-button) {
 	align-self: start;
-	padding-top: 1.25rem;
+	padding-top: 1rem;
 }
